Fixed Nav-scroll on mobile

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -132,12 +132,14 @@ iframe {
     background-color: #20414B;
     color: white;
     padding-bottom: 10%;
+    padding-top: 35px;
   }
 
   .content-light {
     width: 100%;
     color: #20414b;
     padding-bottom: 10%;
+    padding-top: 35px;
   }
 
   .boxed-light {
